--- a/package.json
+++ b/package.json
@@ -1,14 +1,38 @@
 {
-  "name": "ionic-pullup",
-  "description": "ionic-pullup for Angular 4 and Ionic 3",
-  "version": "3.0.1",
-  "main": "./dist/index.js",
-  "typings": "./dist/index.d.ts",
-  "scripts": {
-    "build": "node_modules/.bin/ngc && copyfiles -u 1 ./src/*.scss ./dist",
-    "release": "npm run build && npm publish",
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "_from": "git+https://github.com/DaniilVysotskiy/ionic-pullup.git#3.0",
+  "_id": "ionic-pullup@3.0.1",
+  "_inBundle": false,
+  "_integrity": "",
+  "_location": "/ionic-pullup",
+  "_phantomChildren": {},
+  "_requested": {
+    "type": "git",
+    "raw": "ionic-pullup@git+https://github.com/DaniilVysotskiy/ionic-pullup.git#3.0",
+    "name": "ionic-pullup",
+    "escapedName": "ionic-pullup",
+    "rawSpec": "git+https://github.com/DaniilVysotskiy/ionic-pullup.git#3.0",
+    "saveSpec": "git+https://github.com/DaniilVysotskiy/ionic-pullup.git#3.0",
+    "fetchSpec": "https://github.com/DaniilVysotskiy/ionic-pullup.git",
+    "gitCommittish": "3.0"
   },
+  "_requiredBy": [
+    "/"
+  ],
+  "_resolved": "git+https://github.com/DaniilVysotskiy/ionic-pullup.git#6b0ffe05b5bf7710661133f1fbd1335f407ef0b7",
+  "_spec": "ionic-pullup@git+https://github.com/DaniilVysotskiy/ionic-pullup.git#3.0",
+  "_where": "/home/chezz/projects/cloud-candy-mobile-gaz",
+  "author": {
+    "name": "Ariel Faur"
+  },
+  "bugs": {
+    "url": "https://github.com/arielfaur/ionic-pullup/issues"
+  },
+  "bundleDependencies": false,
+  "dependencies": {
+    "ionic-angular": "^3.6.0"
+  },
+  "deprecated": false,
+  "description": "ionic-pullup for Angular 4 and Ionic 3",
   "devDependencies": {
     "@angular/common": "4.1.3",
     "@angular/compiler": "4.1.3",
@@ -25,10 +49,7 @@
     "typescript": "2.3.4",
     "zone.js": "0.8.12"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/arielfaur/ionic-pullup.git"
-  },
+  "homepage": "http://arielfaur.github.io/ionic-pullup",
   "keywords": [
     "ionic",
     "angular",
@@ -36,13 +57,18 @@
     "player",
     "typescript"
   ],
-  "author": "Ariel Faur",
   "license": "Apache",
-  "bugs": {
-    "url": "https://github.com/arielfaur/ionic-pullup/issues"
+  "main": "./dist/index.js",
+  "name": "ionic-pullup",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/arielfaur/ionic-pullup.git"
   },
-  "homepage": "http://arielfaur.github.io/ionic-pullup",
-  "dependencies": {
-    "ionic-angular": "^3.6.0"
-  }
+  "scripts": {
+    "build": "ngc && cp ./src/*.scss ./dist",
+    "release": "npm run build && npm publish",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "typings": "./dist/index.d.ts",
+  "version": "3.0.1"
 }
